--- a/TechLead_SGE/TechLead_SGE.Client/src/App.css
+++ b/TechLead_SGE/TechLead_SGE.Client/src/App.css
@@ -1,11 +1,11 @@
-﻿#root {
+﻿:root {
+    --BGColor_Blue1: #162C40; /*Azul Oscuro*/
+    --BGColor_Blue2: #020F1DD6; /*Azul Oscuro*/
+}
+
+#root {
     max-width: 1280px;
     margin: 0 auto;
     padding: 2rem;
     text-align: center;
-}
-
-th, td {
-    padding-left: 1rem;
-    padding-right: 1rem;
 }
